fix(experimental/Select): fix dark mode empty state

--- a/packages/themes/src/morpheme/_select.dark.scss
+++ b/packages/themes/src/morpheme/_select.dark.scss
@@ -26,5 +26,8 @@
 
     // selected
     --v-select-selected-color: var(--color-gray-true-200);
+
+    // empty
+    --v-select-empty-color: var(--color-gray-true-400);
   }
 }
